[tool.poetry]
name = "galah"
version = "0.8.3"
description = "A package for getting biodiversity data out of living atlases"
authors = ["Amanda Buyan <amanda.buyan@gmail.com>","Amanda Buyan <amanda.buyan@csiro.au>","Martin Westgate <martin.westgate@csiro.au>"]
readme = "README.md"
license = "GNU General Public License v3.0"

[tool.poetry.dependencies]
python = "^3.11"
shutils = "^0.1.0"
bytesbufio = "^1.0.3"
glob2 = "^0.7"
configparser = "^6.0.1"
requests = "^2.31.0"
urllib3 = "^2.2.1"
time-python = "^0.0.17"
zip-files = "^0.4.1"
pandas = "^2.2.1"
numpy = "^1.26.4"
unittest2py3k = "^0.5.1"
setuptools = "^69.2.0"
shapely = "^2.0.3"
pytest = "^8.1.1"



[tool.commitizen]
name = "cz_conventional_commits"
version_provider = "poetry"
update_changelog_on_bump = true
major_version_zero = true
version_files = [
    "pyproject.toml:version",
    "src/galah/version.py:__version__",
    "setup.py:version"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
