[metadata]
description-file=README.md
license_files=LICENSE.rst
version = attr: package.__version__

# what data to add: https://thepythonguru.com/writing-packages-in-python/

[options]
#package_dir = src
#include_package_data = True

#[options.packages.find]
#where = src

#[options.package_data]
#galah =
#   *py

#[DEFAULT]
#email = ""
